feat(doc-automation): added working tags